fix overflow

--- a/src/components/Block2/styles.module.scss
+++ b/src/components/Block2/styles.module.scss
@@ -38,7 +38,7 @@
 
       @include mobile {
         font-size: 46px;
-        left: -10px;
+        left: 0px;
         top: -80px;
         text-align: left;
       }
